Mensaje descriptivo aquí

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,235 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.color__claro {
+  background-color: #fffffe;
+}
+
+.btn__fondo {
+  background-color: #ff8906;
+}
+
+.color__negro {
+  background-color: #0f0e17;
+  border-bottom: 3px solid #ff8906;
+}
+.margen2{
+margin-bottom: 50px;
+}
+
+.navbar a {
+  color: #fffffe;
+}
+.navbar a:hover {
+  color: #ff8906;
+}
+
+.item-detail-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 20px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #f9f9f9;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.margen {
+  margin: 25px 0;
+}
+
+h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+p {
+  margin-bottom: 5px;
+}
+
+p.price {
+  font-weight: bold;
+}
+
+.description {
+  width: 70%;
+  text-align: justify;
+}
+
+.item-count-container {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.item-count-wrapper {
+  margin-left: auto;
+}
+
+.size {
+  max-width: 500px;
+  max-height: 300px;
+}
+
+.size2 {
+  width: 206px;
+  height: 290px;
+}
+.red {
+  color: red;
+}
+
+.negrita{
+  font-weight: bold;
+}
+
+.btnVolver{
+  
+  text-align: right;
+  margin-right: 20px;
+}
+
+.item:hover {
+  background-color: #f0f0f0; 
+  box-shadow: 0 0 5px rgba(0, 0, 0, 2); 
+  transform: scale(1.05);
+}
+
+.cart-widget {
+  margin-right: 25px;
+}
+
+.btn_item_count{
+  color: #000;
+  border: none;
+  background-color: #ff8906;
+}
+
+.btn_item_count:hover{
+  background-color: #ff8906;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 2); 
+}
+
+.btn_fin{
+  color: #000;
+  border: none;
+  background-color: green;
+}
+
+.btn_fin:hover{
+  background-color: greenyellow;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 2); 
+}
+
+
+
+.cart-table {
+  border-collapse: collapse;
+  width: 80%; 
+  margin: 20px auto; 
+}
+
+
+.cart-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #ccc;
+  padding: 10px 0;
+}
+
+
+.cart-thumbnail {
+  max-width: 50px;
+  height: auto;
+}
+
+
+.cart-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #f4f4f4;
+  font-weight: bold;
+  padding: 10px 0;
+  border-bottom: 1px solid #ccc;
+}
+
+.cart-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #f4f4f4;
+  font-weight: bold;
+  padding: 10px 0;
+  border-bottom: 1px solid #ccc;
+}
+
+
+.cart-details {
+  flex: 1;
+  padding: 10px;
+  text-align: center;
+}
+
+
+.cart-total {
+  margin-top: 20px;
+  margin-right: 150PX;
+  text-align: right;
+  color: #ff8906;
+}
+
+.checkout-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 2rem;
+  padding: 2rem;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+}
+
+.checkout-form {
+  display: grid;
+  gap: 1rem;
+  max-width: 400px;
+  width: 100%;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-label {
+  font-weight: bold;
+  margin-bottom: 1px;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="tel"] {
+  width: 100%;
+  padding: 0.5rem;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.submit-button {
+  margin-top: 1rem;
+  background-color: #007bff;
+  color: white;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.order-success {
+
+
+  font-size: 1.2rem;
+}
